test/testdata/classes/methods/static/missing_4_args_error.lox
class Foo {
  static add(a, b, c, d) {
    print a + b + c + d;
  }
}

Foo.add(); // error: Foo.add() accepts 4 arguments but 0 were given
